--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 */build/
+tutorial01/.vs/ProjectSettings.json
+tutorial01/.vs/slnx.sqlite
+tutorial01/.vs/tutorial01/v15/.suo
+tutorial01/.vs/tutorial01/v15/Browse.VC.db
+tutorial01/.vs/tutorial01/v15/Browse.VC.opendb
+tutorial01/.vs/tutorial01/v15/ipch/AutoPCH/3752267159126d0a/TEST.ipch
+tutorial01/.vs/tutorial01/v15/ipch/AutoPCH/4a87e3c9bf5a342a/TEST.ipch
+tutorial01/.vs/tutorial01/v15/ipch/AutoPCH/f44e70301bb3b300/LEPTJSON.ipch
